--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,1 +1,31 @@
 // Заголовки, общие БЄМ блоки и проче...
+h2 {
+  font-size: rem(56);
+  font-weight: 600;
+
+  @include _1440 {
+    font-size: rem(48);
+  }
+
+  @include _768 {
+    font-size: rem(32);
+  }
+}
+
+h3 {
+  font-size: rem(48);
+  font-weight: 600;
+
+  @include _768 {
+    font-size: rem(32);
+  }
+}
+
+h4 {
+  font-size: rem(32);
+  font-weight: 600;
+
+  @include _768 {
+    font-size: rem(20);
+  }
+}
