--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1,3 +1,656 @@
 //====================================================================================================
+// Breadcrumbs
+//====================================================================================================
+
+.page {
+  padding-top: 56px;
+
+  &__title {
+    margin-top: 24px;
+  }
+}
+
+.breadcrumbs {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+
+  @include _768 {
+    gap: 8px;
+  }
+
+  &__link {
+    font-weight: 500;
+    color: rgba(40, 40, 40, 0.6);
+    transition: all .2s ease-in-out;
+
+    @include _768 {
+      font-size: rem(12);
+      font-weight: 400;
+    }
+
+    &:hover {
+      color: #282828;
+      transition: all .2s ease-in-out;
+    }
+
+    &:last-child {
+      color: #282828;
+      cursor: default;
+    }
+  }
+
+  span {
+    cursor: default;
+  }
+}
 
 //====================================================================================================
+// Contacts
+//====================================================================================================
+
+.contacts {
+  margin-top: 56px;
+  position: relative;
+
+  @include _1440 {
+    display: flex;
+    gap: 32px;
+    flex-direction: column;
+  }
+
+  &__map {
+    width: 100%;
+    height: 728px;
+
+    @include _1760 {
+      height: 696px;
+    }
+
+    @include _1440 {
+      height: 400px;
+    }
+
+    @include _768 {
+      height: 280px;
+    }
+  }
+
+  &__data {
+    position: absolute;
+    top: 56px;
+    left: 56px;
+    background: #fff;
+    padding: 56px;
+    max-width: 554px;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+
+    @include _1440 {
+      position: unset;
+      max-width: 100%;
+      background: #fafafa;
+      padding: 40px 24px;
+    }
+
+    @include _768 {
+      padding: 16px;
+    }
+
+    &_inner {
+      display: flex;
+      flex-direction: column;
+      gap: 24px;
+    }
+
+    &_title {}
+
+    &_row {
+      display: flex;
+      justify-content: space-between;
+
+      @include _768 {
+        align-items: flex-end;
+      }
+    }
+
+    &_wrapper {
+      display: flex;
+      align-items: center;
+      gap: 32px;
+
+      @include _768 {
+        flex-wrap: wrap;
+        gap: 16px;
+      }
+    }
+
+    &_col {
+      display: flex;
+      flex-direction: column;
+      gap: 4px;
+
+      p {
+        line-height: 24px;
+
+        &:first-child {
+          font-weight: 600;
+          color: #282828;
+        }
+
+        &:last-child {
+          font-weight: 400;
+          color: #818181;
+
+          @include _768 {
+            font-size: rem(14);
+          }
+        }
+      }
+    }
+
+    &_buttons {
+      display: flex;
+      gap: 24px;
+      margin-top: 30px;
+
+      @include _768 {
+        flex-direction: column;
+      }
+    }
+
+    &_button {
+      padding: 16px 26px;
+      display: flex;
+      gap: 12px;
+      align-items: center;
+      width: 100%;
+
+      @include _1440 {
+        justify-content: center;
+      }
+
+      p {
+        white-space: nowrap;
+        font-size: rem(16);
+        font-weight: 500;
+      }
+
+      &.map {
+        background: #e5f6ee;
+
+        p {
+          color: #00a55a;
+        }
+      }
+
+      &.phone {
+        background: #00a55a;
+
+        p {
+          color: #fff;
+        }
+      }
+    }
+
+    &_copy {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border: 1px solid #d9d9d9;
+      width: 56px;
+      min-width: 56px;
+      height: 56px;
+      transition: all .1s ease-in-out;
+      background: #fff;
+
+      &:hover {
+        cursor: pointer;
+        border: 1px solid #00a55a;
+        transition: all .1s ease-in-out;
+
+        svg path {
+          stroke: #00A55A;
+        }
+      }
+    }
+  }
+
+  &__note {
+    position: absolute;
+    top: 56px;
+    right: 56px;
+    background: #fff;
+    padding: 32px;
+    display: flex;
+    gap: 16px;
+    width: 37.1%;
+
+    @include _1440 {
+      width: 100%;
+      position: unset;
+      background: #fafafa;
+    }
+
+    &_icon {
+      width: 24px;
+      height: 24px;
+    }
+
+    &_text {
+      font-size: rem(14);
+      font-weight: 400;
+      color: #818181;
+      max-width: 540px;
+      line-height: 22.88px;
+
+      @include _1440 {
+        max-width: 100%;
+      }
+    }
+  }
+}
+
+//====================================================================================================
+// Gallery
+//====================================================================================================
+
+.gallery {
+  margin-top: 124px;
+
+  @include _768 {
+    margin-top: 64px;
+  }
+
+  &__slider {
+    &_arrows {
+      display: flex;
+      gap: 16px;
+      flex-direction: row-reverse;
+    }
+
+
+    &_controls {
+      display: flex;
+      align-items: center;
+      margin-top: 32px;
+      justify-content: space-between;
+      gap: 64px;
+
+      @include _768 {
+        margin-top: 24px;
+      }
+    }
+
+    &_pagination {
+      background-color: #f2f2f2;
+      width: 100%;
+      height: 8px;
+      display: flex;
+      justify-content: space-between;
+
+
+
+      .swiper-pagination-bullet {
+        width: 100%;
+        height: 8px;
+        cursor: pointer;
+        background-color: #f2f2f2;
+        transition: all .2s ease-in-out;
+        border-radius: 0;
+        margin: 0 !important;
+
+        &-active {
+          cursor: default;
+          background-color: #00a55a;
+        }
+      }
+    }
+  }
+
+  &__wrapper {}
+
+  &__slide {
+    img {
+      object-fit: cover;
+      object-position: center;
+      width: 100%;
+      height: 100%;
+    }
+
+
+
+  }
+
+}
+
+//====================================================================================================
+// Team
+//====================================================================================================
+
+.team {
+  margin-top: 124px;
+
+  @include _768 {
+    margin-top: 64px;
+  }
+
+  &__offer {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 41px;
+
+    @include _768 {
+      margin-bottom: 32px;
+    }
+
+    &_wrapper {
+      display: flex;
+      gap: 32px;
+      flex-direction: column;
+
+      @include _768 {
+        gap: 20px;
+      }
+    }
+
+    &_title {}
+
+    &_descr {
+      font-weight: 400;
+      font-size: rem(18);
+      line-height: 24.96px;
+      max-width: 705px;
+
+      @include _768 {
+        font-size: rem(14);
+        max-width: 100%;
+      }
+    }
+  }
+
+  &__slider {
+    overflow: hidden;
+
+    &_arrows {
+      display: flex;
+      gap: 16px;
+      flex-direction: row-reverse;
+    }
+
+    &_pagination {
+      background-color: #f2f2f2;
+      width: 100%;
+      height: 8px;
+      display: none;
+      justify-content: space-between;
+      margin: 40px 0;
+
+      @include _1440 {
+        display: flex;
+      }
+
+      @include _768 {
+        margin-top: 24px;
+      }
+
+      .swiper-pagination-bullet {
+        display: block;
+        width: 100%;
+        height: 8px;
+        cursor: pointer;
+        background-color: #f2f2f2;
+        transition: all .2s ease-in-out;
+        border-radius: 0;
+        margin: 0 !important;
+
+        &-active {
+          cursor: default;
+          background-color: #00a55a;
+        }
+      }
+    }
+  }
+
+
+
+  &__wrapper {}
+
+  &__slide {
+
+    &_img {
+      img {
+        object-fit: cover;
+        object-position: center;
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    &_data {}
+  }
+
+}
+
+.team-data {
+  border-bottom: 1px solid #d9d9d9;
+  border-left: 1px solid #d9d9d9;
+  border-right: 1px solid #d9d9d9;
+  padding: 24px 32px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+
+  &__name {
+    font-weight: 600;
+    color: #282828;
+  }
+
+  &__post {
+    font-weight: 400;
+    color: #818181;
+  }
+}
+
+//====================================================================================================
+// Requisites
+//====================================================================================================
+
+.requisites {
+  margin-top: 124px;
+  margin-bottom: 124px;
+
+  @include _768 {
+    margin-top: 64px;
+    margin-bottom: 64px;
+  }
+
+  &__offer {
+    display: flex;
+    justify-content: space-between;
+
+    &_wrapper {
+      display: flex;
+      flex-direction: column;
+      gap: 32px;
+
+      @include _768 {
+        gap: 20px;
+      }
+    }
+
+    &_title {}
+
+    &_descr {
+      font-weight: 400;
+      font-size: rem(18);
+      line-height: 24.96px;
+      color: #818181;
+      max-width: 1144px;
+
+      @include _1760 {
+        max-width: 770px;
+      }
+
+      @include _768 {
+        font-size: rem(16);
+        max-width: 100%;
+      }
+    }
+
+    &_btn {}
+  }
+
+  &__table {
+    margin-top: 56px;
+    border: 1px solid #d9d9d9;
+    max-width: 1144px;
+    width: 100%;
+
+    @include _1760 {
+      max-width: 100%;
+    }
+
+    @include _768 {
+      border: none;
+      margin-top: 32px;
+    }
+
+    &_body {}
+
+    &_row {
+      display: grid;
+      grid-template-columns: 1fr 2fr;
+      grid-template-rows: 1fr;
+      border-bottom: 1px solid #d9d9d9;
+
+      @include _768 {
+        grid-template-columns: 1fr 1fr;
+        gap: 20px;
+      }
+    }
+
+    &_col {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 16px 32px;
+      width: 100%;
+
+      @include _768 {
+        font-size: rem(14);
+        padding: 16px 0;
+
+        a {
+          display: none;
+        }
+      }
+
+      &:first-child {
+        font-weight: 600;
+        color: #282828;
+      }
+
+      &:last-child {
+        font-weight: 400;
+        color: #282828;
+        border-left: 1px solid #d9d9d9;
+
+        @include _768 {
+          border-left: none;
+        }
+      }
+    }
+
+    &_copy {}
+  }
+}
+
+.offer-btn {
+  background: #fafafa;
+  display: flex;
+  gap: 24px;
+  align-items: center;
+  padding: 24px 32px 24px 24px;
+  max-width: 444px;
+  width: 100%;
+  height: fit-content;
+
+  @include _1440 {
+    margin-top: 40px;
+    max-width: 100%;
+  }
+
+  @include _768 {
+    margin-top: 32px;
+  }
+
+  &__icon {
+    width: 56px;
+    height: 56px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #e5f6ee;
+  }
+
+  &__text {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+
+    p {
+      line-height: 24px;
+
+      &:first-child {
+        font-weight: 600;
+        font-size: rem(20);
+        color: #282828;
+      }
+
+      &:last-child {
+        font-weight: 400;
+        color: #818181;
+      }
+    }
+  }
+}
+
+//====================================================================================================
+// Slider
+//====================================================================================================
+
+.swiper {
+  @include _1440 {
+    overflow: unset !important;
+  }
+}
+
+.slider__arrow {
+  border: 1px solid #00a55a;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 56px;
+  height: 56px;
+  cursor: pointer;
+
+  svg path {
+    stroke: #00A55A;
+  }
+
+  &.swiper-button-disabled {
+    border: none;
+
+    svg path {
+      stroke: #D9D9D9;
+    }
+  }
+}
+
+@include _1440 {
+  .arrows-adaptive {
+    display: none;
+  }
+}
